wandb/run-20231102_190515-5iacktd2/files/output.log

<wandb.sdk.wandb_run.Run object at 0x281b61410>
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/Users/brianliu03/miniconda3/envs/mlenv/lib/python3.11/site-packages/datasets/load.py", line 2129, in load_dataset
    builder_instance = load_dataset_builder(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/brianliu03/miniconda3/envs/mlenv/lib/python3.11/site-packages/datasets/load.py", line 1815, in load_dataset_builder
    dataset_module = dataset_module_factory(
                     ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/brianliu03/miniconda3/envs/mlenv/lib/python3.11/site-packages/datasets/load.py", line 1446, in dataset_module_factory
    ).get_module()
      ^^^^^^^^^^^^
  File "/Users/brianliu03/miniconda3/envs/mlenv/lib/python3.11/site-packages/datasets/load.py", line 859, in get_module
    patterns = get_data_patterns(base_path)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/brianliu03/miniconda3/envs/mlenv/lib/python3.11/site-packages/datasets/data_files.py", line 460, in get_data_patterns
    raise EmptyDatasetError(f"The directory at {base_path} doesn't contain any data files") from None
datasets.data_files.EmptyDatasetError: The directory at /Users/brianliu03/Documents/Projects/sentiment-analysis/sst2 doesn't contain any data files
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'dataset' is not defined
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'dataset' is not defined
  File "<stdin>", line 2
    return tokenizer(examples[text_name],    return tokenizer(examples[text_name],  tr    retmall_train_dataset.map(preprocess, batched=True)
                                             ^^^^^^
SyntaxError: invalid syntax
  File "<stdin>", line 1
    tokenized_test tokenized_test tokenized_test toess, batched=True)
                   ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
  File "<stdin>", line 1
    data_collator = DataCdata_collator = DataCdata_collatonizer)
                                                               ^
SyntaxError: unmatched ')'
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'AutoMmoClassification' is not defined
<wandb.sdk.wandb_run.Run object at 0x281b61410>